kube/alrest/x/mi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mi
  labels:
    app.kubernetes.io/name: mi
