kube/alrest/x/mi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: grpc
    - protocol: TCP
      port: 9195
      targetPort: 9195
      name: metrics
  type: ClusterIP
