kube/alrest/x/mi/public-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-public
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: public-http-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mi.cetacean.club
      secretName: mi-public-tls
  rules:
    - host: mi.cetacean.club
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mi
                port:
                  name: http
