kube/alrest/x/mi/public-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-front-public
  namespace: mi
  labels:
    app.kubernetes.io/name: mi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - home.cetacean.club
      secretName: home-cetacean-club-tls
  rules:
    - host: home.cetacean.club
      http:
        paths:
          - pathType: Prefix
            path: "/front"
            backend:
              service:
                name: mi
                port:
                  name: http
